adaptación de ancho

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app" class="2xl:container 2xl:mx-auto xl:w-screen"></div>
+    <div id="app" class="2xl:container 2xl:mx-auto xl:w-screen lg:p-6"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
