--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="./src/assets/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <meta name="robots" content="index" />
+    <title>Michemura</title>
   </head>
   <body>
     <div id="app" class="2xl:container 2xl:mx-auto xl:w-screen lg:p-6"></div>
